# scim-avro

./: ProjectHome.md  configure  configure.ac  mkinstalldirs
data/: Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in  scim_avro_englishtobangla.cpp  scim_avro_englishtobangla.h  scim_avro_imengine.cpp  scim_avro_imengine_factory.cpp  scim_avro_imengine_factory.h
trunk/: AUTHORS  ChangeLog  Makefile.in  description-pak
trunk/m4/: Makefile.in
trunk/po/: Makevars  POTFILES.in
trunk/src/: intl.h  scim_avro_englishtobangla.cpp  scim_avro_englishtobangla.h  scim_avro_imengine.cpp  scim_avro_imengine.h  scim_avro_imengine_factory.cpp
wiki/: FAQ.wiki  GettingStarted.wiki  InstallingScimAvro.wiki  InstallingScimAvroFromBinaryOnUbuntu.wiki  InstallingScimAvroFromSourceOnFedora.wiki  InstallingScimAvroFromSourceOnUbuntu.wiki  TweakingFromSource.wiki
